Facebook and App Store links

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				  <div class="col-md-offset-2 col-md-8">
 					 <h1>Beautiful Scorecards</h1>
 					 	    <p class="lead">Designed for Apple Watch and iPhone</p>
-					 	    <button type="button" class="app-store"></button>	
+					 	    <button type="button" class="app-store" onclick="location.href='https://itunes.apple.com/us/app/golf-watch-scorecard-for-iphone/id981739728?mt=8'"></button>	
 				  </div>
 			  </div>
 		  </div>
@@ -202,7 +202,7 @@
 	  		  <div class="row">
 	  			  <div class="col-md-12">
 	  			  	<h2>Connect with us</h2>
-	  			   	<a class="icon-facebook"></a>
+	  			   	<a class="icon-facebook" href="https://www.facebook.com/golfwatchscorecard"></a>
 	  			   	<a class="icon-twitter"></a>
 	  			   </div>
 	  		  </div>
@@ -218,7 +218,7 @@
 	  			<div class="col-md-12">
 	  				<h1>Available now on the App Store</h1>
 	  				<p class="lead">for both iPhone and Apple Watch</p>
-	  				<button type="button" class="app-store"></button>
+	  				<button type="button" class="app-store" onclick="location.href='https://itunes.apple.com/us/app/golf-watch-scorecard-for-iphone/id981739728?mt=8'"></button>
 	  			</div>
 	  			<div class="col-md-12">
 	  				<hr />
