added email links

--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
 	  			<div class="col-md-12">
 	  				<hr />
 		  			<ul>
-	                	<li><a href="#link-here">Contact</a></li>
-	                	<li><a href="#link-here">Press</a></li>
-	                	<li><a href="#link-here">Support</a></li>
+	                	<li><a href="mailto:contact@golfwatchscorecard.com?Subject=Golf%20Watch%20Scorecard" target="_top">Contact</a></li>
+	                	<li><a href="mailto:press@golfwatchscorecard.com?Subject=Golf%20Watch%20Scorecard%20Press%20Inquiry" target="_top">Press</a></li>
+	                	<li><a href="mailto:support@golfwatchscorecard.com?Subject=Golf%20Watch%20Scorecard%20Support" target="_top">Support</a></li>
                 	</ul>
 	  			</div>
 	  		</div>
