added twitter link

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 	  			  <div class="col-md-12">
 	  			  	<h2>Connect with us</h2>
 	  			   	<a class="icon-facebook" href="https://www.facebook.com/golfwatchscorecard"></a>
-	  			   	<a class="icon-twitter"></a>
+	  			   	<a class="icon-twitter" href="https://twitter.com/GolfWatchApp"></a>
 	  			   </div>
 	  		  </div>
 	  	  </div>	  
