--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				  </div>
 				
 				  <div class="col-md-4">
-					  <div class="circle"><i class="icon-keypad"></i></div>
+					  <div class="circle"><img style="v-align:top;" src="./img/watch.png" /></div>
 					  <h2>Apple Watch</h2>
 					  <p>Edit your score on iPhone or Apple Watch</p>
 				  </div>
