--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					      	<div class="row">
 					      		<div class="col-sm-12 col-md-offset-1 col-md-6">
 					      			<h1>Automatic Score Sync</h1>
-					      			<p>Keep score from the convenience of Apple Watch and all you score data is automatically available on your iPhone</p>
+					      			<p>Keep score from the convenience of Apple Watch and your score data is automatically available on your iPhone</p>
 					      		</div>
 					      		<div class="col-sm-12 col-md-5">
 					      			<div class="app-screenshot">
