--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 					    	<div class="row">
 					    		<div class="col-sm-12 col-md-offset-1 col-md-6">
 					    			<h1>Beautiful Scorecards</h1>
-					    			<p>Gorgeous, clean scorecards take advatage of the large iPhone display</p>
+					    			<p>Gorgeous, clean scorecards take advantage of the large iPhone display</p>
 					    		</div>
 					    		<div class="col-sm-12 col-md-5">
 					    			<div class="app-screenshot2">
